Refactoring; add implementation for controller to find similar products + unit tests.
